src/objects/Questionnaire_Dynamic_Logic__c.object
<CustomObject>
    <fields>
        <fullName>Question_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup with Question Group</description>
        <label>Question Group</label>
        <referenceTo>Question_Group__c</referenceTo>
        <relationshipLabel>Questionnaire Dynamic Logic</relationshipLabel>
        <relationshipName>Dynamic_Logic</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Question_Option__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup with Question Option</description>
        <label>Question Option</label>
        <referenceTo>Question_Option__c</referenceTo>
        <relationshipLabel>Questionnaire Dynamic Logic</relationshipLabel>
        <relationshipName>Dynamic_Logic</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Question_Questionnaire__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup with Question Questionnaire</description>
        <label>Question Questionnaire</label>
        <referenceTo>Question_Questionnaire__c</referenceTo>
        <relationshipLabel>Questionnaire Dynamic Logic (Question Questionnaire)</relationshipLabel>
        <relationshipName>Dynamic_Logic</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Show_Question_Questionnaire__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup with Question Questionnaire</description>
        <label>Show Question Questionnaire</label>
        <referenceTo>Question_Questionnaire__c</referenceTo>
        <relationshipLabel>Questionnaire Dynamic Logic (Show Question Questionnaire)</relationshipLabel>
        <relationshipName>Dynamic_Logic1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Questionnaire Dynamic Logic</label>
    <nameField>
        <displayFormat>DL-{0000}</displayFormat>
        <label>Dynamic Logic Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Questionnaire Dynamic Logic</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>